# oneTouchCozyMood

./: LICENSE  One Touch Cozy Mood presentation.pptx  README.md  brainstorming ENG5220.txt  ideas for pitch speech.txt  prerequisites.sh  real time -  notes 15.2.22.txt
BIOMETRIC_MP3_PLAYER/Delete_Users/src/: delete_all_user.cpp
BIOMETRIC_MP3_PLAYER/Enroll_Users/: CMakeLists.txt
BIOMETRIC_MP3_PLAYER/Enroll_Users/src/: enroll_user.cpp
BIOMETRIC_MP3_PLAYER/Music_Player/: CMakeLists.txt
BIOMETRIC_MP3_PLAYER/Music_Player/include/: gpio_driver.h  mp3_handler.h  player_gui.h
BIOMETRIC_MP3_PLAYER/Music_Player/src/: dir_handler.cpp  fpsR305.cpp  gpio_driver.cpp  mp3_handler.cpp  music_player.cpp  player_gui.cpp
Delete_Users/: CMakeLists.txt
Delete_Users/include/: fpsR305.h
Delete_Users/src/: delete_all_user.cpp
Enroll_Users/: CMakeLists.txt
Enroll_Users/src/: dir_handler.cpp  enroll_user.cpp
Music_Player/: CMakeLists.txt
Music_Player/include/: dir_handler.h  mp3_handler.h
Music_Player/src/: mp3_handler.cpp  music_player.cpp
oneTouchCozyMood/Delete_Users/: CMakeLists.txt
oneTouchCozyMood/Delete_Users/include/: fpsR305.h
oneTouchCozyMood/Delete_Users/src/: delete_all_user.cpp  dir_handler.cpp
oneTouchCozyMood/Enroll_Users/src/: enroll_user.cpp  fpsR305.cpp
oneTouchCozyMood/Music_Player/include/: gpio_driver.h  mp3_handler.h  player_gui.h
oneTouchCozyMood/Music_Player/src/: gpio_driver.cpp  (+3 more)
oneTouchCozyMood/Unit_Test/: CMakeLists.txt
oneTouchCozyMood/Unit_Test/include/: dir_handler.h
oneTouchCozyMood/Unit_Test/src/: unit_test.cpp
